force-app/main/default/objects/ProdTechRefAttrib__c/ProdTechRefAttrib__c.object-meta.xml
<CustomObject>
    <label>Prod Tech Ref Attrib</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prod Tech Ref Attribs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>