force-app/main/default/objects/ProdTechRefAttrib__c/fields/AttribName__c.field-meta.xml
<CustomField>
    <fullName>AttribName__c</fullName>
    <label>Attrib. Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProdAttribNames</valueSetName>
    </valueSet>
</CustomField>