force-app/main/default/objects/ProdTechRefAttrib__c/fields/AttribType__c.field-meta.xml
<CustomField>
    <fullName>AttribType__c</fullName>
    <label>Attrib. Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NUMBER</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>