force-app/main/default/objects/ProdTechRefAttrib__c/fields/AttribValue__c.field-meta.xml
<CustomField>
    <fullName>AttribValue__c</fullName>
    <formula>IF(
				NOT ISBLANK(AttribValueText__c), AttribValueText__c, TEXT(AttribValueNum__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attrib. Value</label>
    <type>Text</type>
</CustomField>