force-app/main/default/objects/ProdTechRefAttrib__c/fields/AttribValueNum__c.field-meta.xml
<CustomField>
    <fullName>AttribValueNum__c</fullName>
    <label>AttribValueNum</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>