force-app/main/default/objects/ProdTechRefAttrib__c/fields/AttribValueText__c.field-meta.xml
<CustomField>
    <fullName>AttribValueText__c</fullName>
    <label>AttribValueText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>