force-app/main/default/objects/ProdTechRefAttrib__c/fields/ProdTechDetails__c.field-meta.xml
<CustomField>
    <fullName>ProdTechDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdTechDetails</label>
    <referenceTo>ProdTechRefDetails__c</referenceTo>
    <relationshipLabel>Prod Tech Ref Attribs</relationshipLabel>
    <relationshipName>Prod_Tech_Ref_Attribs</relationshipName>
    <type>Lookup</type>
</CustomField>