force-app/main/default/objects/ProdTechRefAttrib__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProdTechDetails__c</columns>
    <columns>AttribName__c</columns>
    <columns>AttribType__c</columns>
    <columns>AttribValueNum__c</columns>
    <columns>AttribValueText__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>OldID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>